# Gereralized-Eigenvalue-Problem

./: README.MD  README.txt
example/vibrationAnalysis/: CMakeLists.txt  main.cpp  mesh_slenderRing.txt
include/: Combination.h  Element.h  FE8nodeICM.h  RCMordering.h  TicToc.h
include/igl/: slice.cpp  slice.h
src/: FE8nodeICM.cpp
src/tmp/: FE27node.cpp
